# OOP_lab_6

./: CMakeLists.txt  main.cpp  tests.cpp
include/: battle_observer.h  bull.h  console_observer.h  dragon.h  dungeon_editor.h  file_observer.h  frog.h  npc.h  npc_factory.h  npc_visitor.h  observer.h
src/: battle_observer.cpp  bull.cpp  console_observer.cpp  dragon.cpp  dungeon_editor.cpp  file_observer.cpp  frog.cpp  npc.cpp  npc_factory.cpp  npc_visitor.cpp
